--- a/build.gradle
+++ b/build.gradle
@@ -3,11 +3,11 @@ apply plugin: 'java'
 apply plugin: 'eclipse'
 
 repositories {
-    mavenCentral()
     jcenter()
 }
 
 dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.4'
+    testCompile 'org.hamcrest:hamcrest-all:1.+',
+		'org.mockito:mockito-core:1.+',
+		'junit:junit:4.+'
 }
-
